   some undef values in %INC for the TMPDIR, TEMP, and TMP entries if
   they didn't exist already.  This is probably a bug in perl itself
   (submitted as #37441 on rt.perl.org), which we're now working
   around. [Thomas L. Shinnick]

 - Integrated a change from bleadperl - a certain #ifdef in Cwd.xs
   needs to apply to WIN32 but not WinCE. [Vadim Konovalov]

3.12  Mon Oct  3 22:09:12 CDT 2005

 - Fixed a testing error on OS/2 in which a drive letter for the root
   directory was confusing things. [Ilya Zakharevich]

 - Integrated a patch from bleadperl for fixing path() on
   Win32. [Gisle Aas]

3.11  Sat Aug 27 20:12:55 CDT 2005

 - Fixed a couple of typos in the documentation for
   File::Spec::Mac. [Piotr Fusik]

3.10  Thu Aug 25 22:24:57 CDT 2005

 - eliminate_macros() and fixpath() in File::Spec::VMS are now
   deprecated, since they are MakeMaker-specific and now live inside
   MakeMaker. [Michael Schwern]

 - canonpath() on Win32 now collapses foo/.. (or foo\..) sections
   correctly, rather than doing the "misguided" work it was previously
   doing.  Note that canonpath() on Unix still does NOT collapse these
   sections, as doing so would be incorrect.  [Michael Schwern]

3.09  Tue Jun 14 20:36:50 CDT 2005

 - Added some block delimiters (brackets) in the Perl_getcwd_sv() XS
   function, which were necessary to separate the variable
   declarations from the statements when HAS_GETCWD is not
   defined. [Yves]

 - Apparently the _NT_cwd() routine is never defined externally like I
   thought it was, so I simplified the code around it.

 - When cwd() is implemented using the _backtick_pwd() function, it
   sometimes could create accidental undef entries in %ENV under perl
   5.6, because local($hash{key}) is somewhat broken.  This is now
   fixed with an appropriate workaround. [Neil Watkiss]

3.08  Sat May 28 10:10:29 CDT 2005

 - Fixed a test failure with fast_abs_path() on Windows - it was